Editing/Deleting Backend + passing in the right data to UI #18 (#23)
* merged the displaying photos functionaility from main

* Connected Firebase to the "EditJobActivity" so edits made to errands will reflect to the DB.

Images also appear in the EditJobActivity page

TODO: Add option to edit errand photos by: add, remove images from errands

* Implemented functionality to remove or add photos when editing an errand.

Made a "Add photo" button
Made an 'X' at the top right of the images to delete them

Also included a maximum photo count and progress bar in the form of text changing to "Uploading photo..."

Tap "Save Changes" button to upload photos

* Forgot to upload?

--- a/app/src/main/res/layout/activity_image_preview.xml
+++ b/app/src/main/res/layout/activity_image_preview.xml
@@ -18,7 +18,7 @@
         android:layout_margin="16dp"
         android:background="@android:color/transparent"
         android:src="@android:drawable/ic_menu_close_clear_cancel"
-        android:tint="#FFFFFF"
+        app:tint="#FFFFFF"
         android:contentDescription="@string/close"
         app:layout_anchorGravity="top|end" />
 
