--- a/app/src/main/res/layout/activity_create_job.xml
+++ b/app/src/main/res/layout/activity_create_job.xml
@@ -49,11 +49,10 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Description Input (multiline) -->
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/descriptionInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:hint="Description"
                 app:boxBackgroundMode="outline">
 
