--- a/app/src/main/res/layout/item_media_image.xml
+++ b/app/src/main/res/layout/item_media_image.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/img"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_margin="4dp"
+    android:layout_width="120dp"
+    android:layout_height="match_parent"
+    android:layout_marginEnd="8dp"
     android:scaleType="centerCrop"
     android:background="@android:color/darker_gray"/>
