--- a/app/src/main/res/layout/item_chat_message_me.xml
+++ b/app/src/main/res/layout/item_chat_message_me.xml
@@ -25,7 +25,7 @@
         <ImageView
             android:id="@+id/messageImage"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:visibility="gone"/>
