--- a/app/src/main/res/layout/item_job.xml
+++ b/app/src/main/res/layout/item_job.xml
@@ -31,6 +31,19 @@
                 android:textColor="@android:color/black" />
 
             <TextView
+                android:id="@+id/completedBadge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Completed"
+                android:padding="4dp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/badge_green"
+                android:textSize="12sp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
                 android:id="@+id/claimedBadge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
